--- a/jd-app-client/pom.xml
+++ b/jd-app-client/pom.xml
@@ -18,26 +18,11 @@
 	
 	<properties>
 		<servlet.version>3.1.0</servlet.version>
+		<org.springframework-security.version>4.0.4.RELEASE</org.springframework-security.version>
 	</properties>
 
 	<dependencies>
 		<!-- Spring Framework -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${org.springframework.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>${org.springframework.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
