--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 	<properties>
 		<!-- Spring -->
 		<org.springframework.version>4.2.6.RELEASE</org.springframework.version>
-		<org.springframework-security.version>4.0.4.RELEASE</org.springframework-security.version>
 
 		<!-- Utility -->
 		<commons-lang.version>3.4</commons-lang.version>
@@ -24,17 +23,35 @@
 		<gson.version>2.2.4</gson.version>
 
 		<!-- Logging -->
-		<slf4j-api.version>1.7.5</slf4j-api.version>
+		<slf4j-api.version>1.7.7</slf4j-api.version>
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
 
 	<modules>
 		<module>jd-app-client</module>
 		<module>jd-app-server</module>
-    
-  </modules>
+
+	</modules>
 
 	<dependencies>
+		<!-- Spring Framework -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -48,8 +65,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
+			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j-api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 
 		<!-- Utilities -->
