--- a/jd-app-server/pom.xml
+++ b/jd-app-server/pom.xml
@@ -27,6 +27,14 @@
 			</exclusions>
 		</dependency>
 
+		<!-- Spring ORM -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+
 		<!-- Hibernate JPA -->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
