--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
 		<!-- Logging -->
 		<slf4j-api.version>1.7.7</slf4j-api.version>
 		<log4j.version>1.2.17</log4j.version>
+
+		<!-- MySQL JDBC driver -->
+		<mysql-driver.version>5.1.25</mysql-driver.version>
 	</properties>
 
 	<modules>
@@ -110,6 +113,13 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+
+		<!-- MySQL driver -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-driver.version}</version>
 		</dependency>
 
 	</dependencies>
