--- a/jd-app-server/pom.xml
+++ b/jd-app-server/pom.xml
@@ -9,8 +9,14 @@
 	<artifactId>jd-app-server</artifactId>
 
 	<properties>
+		<!-- Spring Data -->
 		<org.springframework-data.version>1.10.1.RELEASE</org.springframework-data.version>
-		<hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
+		
+		<!-- Hibernate EntityManager -->
+		<hibernate.entitymanager.version>5.1.0.Final</hibernate.entitymanager.version>
+		
+		<!-- MySQL JDBC driver -->
+		<mysql-driver.version>5.1.25</mysql-driver.version>
 	</properties>
 
 	<dependencies>
@@ -35,11 +41,18 @@
 		</dependency>
 
 
-		<!-- Hibernate JPA -->
+		<!-- Hibernate EntityManager -->
 		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>${hibernate.jpa.version}</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.entitymanager.version}</version>
+		</dependency>
+
+		<!-- MySQL driver -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-driver.version}</version>
 		</dependency>
 
 	</dependencies>
