--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		<gson.version>2.2.4</gson.version>
 
 		<!-- Logging -->
-		<slf4j-api.version>1.7.7</slf4j-api.version>
-		<log4j.version>1.2.17</log4j.version>
+		<slf4j-api.version>1.7.12</slf4j-api.version>
+		<logback.version>1.1.3</logback.version>
 	</properties>
 
 	<modules>
@@ -55,23 +55,13 @@
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j-api.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 
 		<!-- Utilities -->
